SLCORE-2079 Filter issue resolutions after all sensors